--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,23 @@
         <dependency>
             <groupId>org.bytedeco</groupId>
             <artifactId>onnxruntime-platform</artifactId>
-            <version>1.22.0-1.5.12</version>
+            <version>1.24.1-1.5.13-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
         <sourceDirectory>.</sourceDirectory>
     </build>
+    <repositories>
+        <repository>
+            <id>central-portal-snapshots</id>
+            <name>Central Portal Snapshots</name>
+            <url>https://central.sonatype.com/repository/maven-snapshots/</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
